# monolith

./: .gitignore  Dockerfile  docker-compose.development.yml  docker-compose.production.yml  docker-compose.test.yml
app/: setup.py
app-bazel/: WORKSPACE.bazel
app-bazel/app/: BUILD.bazel  main.py
app-bazel/calculator/: BUILD.bazel  calculator.py  calculator_test.py
app/backend/: server.py
app/backend/api/: posts.py
app/backend/database/: __init__.py  client.py  json.py  seed.py
database/: database.sql
frontend/frontend/: package-lock.json  package.json
frontend/frontend/public/: index.html
frontend/frontend/src/: App.js  index.js
frontend/frontend/src/pages/: Home.js  Layout.js  Navbar.css  Navbar.js  Posts.js
nginx/: monolith.nginx.conf
